# Ascend-msopcom

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.py  dependencies.json  download_dependencies.py
csrc/: CMakeLists.txt
csrc/acl_rt_impl/: AclRuntimeConfig.h  AscendclImplOrigin.cpp  AscendclImplOrigin.h  CMakeLists.txt  HijackedFunc.h  HijackedFuncOfAclmdlRIBindStreamImpl.cpp  HijackedFuncOfAclmdlRICaptureBeginImpl.cpp  HijackedFuncOfAclmdlRICaptureEndImpl.cpp  HijackedFuncOfAclmdlRIUnbindStreamImpl.cpp  HijackedFuncOfAclrtBinaryGetFunctionByEntryImpl.cpp  HijackedFuncOfAclrtBinaryGetFunctionImpl.cpp  HijackedFuncOfAclrtBinaryLoadFromDataImpl.cpp  HijackedFuncOfAclrtBinaryLoadFromFileImpl.cpp  HijackedFuncOfAclrtBinaryLoadImpl.cpp  HijackedFuncOfAclrtCreateBinaryImpl.cpp  HijackedFuncOfAclrtCreateContextImpl.cpp  HijackedFuncOfAclrtFreeHostImpl.cpp  HijackedFuncOfAclrtFreeImpl.cpp  HijackedFuncOfAclrtGetDeviceCountImpl.cpp  HijackedFuncOfAclrtGetDeviceImpl.cpp  HijackedFuncOfAclrtGetDeviceInfoImpl.cpp  HijackedFuncOfAclrtGetSocNameImpl.cpp  HijackedFuncOfAclrtIpcMemCloseImpl.cpp  HijackedFuncOfAclrtIpcMemGetExportKeyImpl.cpp  HijackedFuncOfAclrtIpcMemImportByKeyImpl.cpp  HijackedFuncOfAclrtKernelArgsAppendImpl.cpp  HijackedFuncOfAclrtKernelArgsAppendPlaceHolderImpl.cpp  HijackedFuncOfAclrtKernelArgsFinalizeImpl.cpp  HijackedFuncOfAclrtKernelArgsGetPlaceHolderBufferImpl.cpp  HijackedFuncOfAclrtKernelArgsInitByUserMemImpl.cpp  HijackedFuncOfAclrtKernelArgsInitImpl.cpp  HijackedFuncOfAclrtKernelArgsParaUpdateImpl.cpp  HijackedFuncOfAclrtLaunchKernelImpl.cpp  HijackedFuncOfAclrtLaunchKernelV2Impl.cpp  HijackedFuncOfAclrtLaunchKernelWithConfigImpl.cpp  HijackedFuncOfAclrtLaunchKernelWithHostArgsImpl.cpp  HijackedFuncOfAclrtMallocCachedImpl.cpp  HijackedFuncOfAclrtMallocHostImpl.cpp  HijackedFuncOfAclrtMallocHostWithCfgImpl.cpp  HijackedFuncOfAclrtMallocImpl.cpp  (+12 more)
csrc/ascend_dump/: CMakeLists.txt  HijackedFunc.h  HijackedFuncOfAdumpGetDFXInfoAddrForDynamic.cpp
csrc/ascend_hal/: AscendHalOrigin.cpp  AscendHalOrigin.h  CMakeLists.txt  HijackedFunc.h  HijackedFuncOfHalGetSocVersion.cpp
csrc/ascendcl/: AscendclOrigin.cpp  AscendclOrigin.h  CMakeLists.txt  HijackedFunc.h
csrc/bind/: BindOpprof.cpp  BindSanitizer.cpp  CMakeLists.txt
csrc/camodel/: CMakeLists.txt  Camodel.cpp  Camodel.h  CamodelHelper.cpp  CamodelHelper.h
csrc/core/: BinaryInstrumentation.cpp  BinaryInstrumentation.h  CMakeLists.txt  Communication.cpp  Communication.h  DomainSocket.cpp  DomainSocket.h  FuncSelector.cpp  FuncSelector.h  FunctionLoader.cpp  FunctionLoader.h  HijackedFuncTemplate.h  HijackedLayerManager.cpp  HijackedLayerManager.h  LocalDevice.h  LocalProcess.cpp  LocalProcess.h  PlatformConfig.h  RemoteProcess.cpp  RemoteProcess.h  Revision.cpp  Revision.h
csrc/hccl/: CMakeLists.txt  HcclOrigin.cpp  HcclOrigin.h  HijackedFunc.h  HijackedFuncOfHcclCommInitClusterInfo.cpp  HijackedFuncOfHcclCommInitClusterInfoConfig.cpp  HijackedFuncOfHcclCommInitRootInfo.cpp  HijackedFuncOfHcclCommInitRootInfoConfig.cpp
csrc/include/: prof.h
csrc/kernel_injection/: CMakeLists.txt  MSBit.cpp
csrc/profapi/: CMakeLists.txt  HijackedFunc.h  HijackedFuncOfMsprofNotifySetDevice.cpp  HijackedFuncOfMsprofRegisterCallback.cpp  HijackedFuncOfMsprofReportAdditionalInfo.cpp  ProfInjectHelper.h  ProfOriginal.cpp  ProfOriginal.h  RegisterMsopprofProfileCallback.cpp  RegisterMsopprofProfileCallback.h
csrc/runtime/: CMakeLists.txt  HijackedFunc.h  HijackedFuncOfAiCpuKernelLaunchExWithArgs.cpp  HijackedFuncOfCtxCreate.cpp  HijackedFuncOfCtxCreateEx.cpp  HijackedFuncOfCtxCreateV2.cpp  HijackedFuncOfCtxGetOverflowAddr.cpp  HijackedFuncOfDevBinaryRegister.cpp  HijackedFuncOfDevBinaryUnRegister.cpp  HijackedFuncOfDeviceReset.cpp  HijackedFuncOfDeviceResetEx.cpp  HijackedFuncOfDeviceStatusQuery.cpp  HijackedFuncOfFree.cpp  HijackedFuncOfFunctionRegister.cpp  HijackedFuncOfGetAiCoreCount.cpp  HijackedFuncOfGetDevice.cpp  HijackedFuncOfGetDeviceCount.cpp  HijackedFuncOfGetDeviceInfo.cpp  HijackedFuncOfGetL2CacheOffset.cpp  HijackedFuncOfGetSocVersion.cpp  HijackedFuncOfIpcCloseMemory.cpp  HijackedFuncOfIpcDestroyMemoryName.cpp  HijackedFuncOfIpcOpenMemory.cpp  HijackedFuncOfIpcSetMemoryName.cpp  HijackedFuncOfKernelLaunch.cpp  HijackedFuncOfKernelLaunchWithFlagV2.cpp  HijackedFuncOfKernelLaunchWithHandleV2.cpp  HijackedFuncOfMalloc.cpp  HijackedFuncOfMapMem.cpp  HijackedFuncOfMemcpy.cpp  HijackedFuncOfMemset.cpp  HijackedFuncOfModelBindStream.cpp  HijackedFuncOfRegisterAllKernel.cpp  HijackedFuncOfSetDevice.cpp  HijackedFuncOfSetDeviceEx.cpp  HijackedFuncOfSetDeviceV2.cpp  HijackedFuncOfSetExceptionExtInfo.cpp  HijackedFuncOfStreamSynchronizeWithTimeout.cpp  HijackedFuncOfUnmapMem.cpp  RuntimeConfig.h  (+2 more)
csrc/tools/: CMakeLists.txt
csrc/utils/: CMakeLists.txt  ElfLoader.cpp  ElfLoader.h  Environment.cpp  Environment.h  FileSystem.cpp  FileSystem.h  Future.h  InjectLogger.h  Numeric.h  Path.cpp  Path.h  PipeCall.cpp  PipeCall.h  Protocol.h  Serialize.h  Singleton.h  Struct.h  TypeTraits.h  UmaskGuard.h  Ustring.cpp  Ustring.h
test/: CMakeLists.txt  generate_coverage.sh  main.cpp
test/acl_rt_impl/: AscendclImplOriginTest.cpp  CMakeLists.txt  HijackedFuncOfAclrtCreateContextImplTest.cpp  HijackedFuncOfAclrtGetDeviceCountImplTest.cpp  HijackedFuncOfAclrtGetDeviceImplTest.cpp  HijackedFuncOfAclrtGetDeviceInfoImplTest.cpp  HijackedFuncOfAclrtGetSocNameImplTest.cpp  HijackedFuncOfAclrtIpcMemCloseImplTest.cpp  HijackedFuncOfAclrtIpcMemGetExportKeyTest.cpp  HijackedFuncOfAclrtIpcMemImportByKeyTest.cpp  HijackedFuncOfAclrtKernelArgsInitByUserMemImplTest.cpp  HijackedFuncOfAclrtLaunchKernelTest.cpp  HijackedFuncOfAclrtLaunchKernelV2Test.cpp  HijackedFuncOfAclrtLaunchKernelWithConfigTest.cpp  HijackedFuncOfAclrtLaunchKernelWithHostArgsTest.cpp  HijackedFuncOfAclrtMallocImplTest.cpp  HijackedFuncOfAclrtMallocWithCfgImplTest.cpp  HijackedFuncOfAclrtMapMemImplTest.cpp  HijackedFuncOfAclrtQueryDeviceStatusImplTest.cpp  HijackedFuncOfKernelArgsAppendPlaceHolderTest.cpp  HijackedFuncOfKernelArgsAppendTest.cpp  (+5 more)
(+235 files in other folders)
